feat: culminar kpi
